refactor(opencl): make the physical-device fingerprint vendor-neutral, and correct the docs
Follow-up to the four commits pulled from the dual-GPU machine. The work was
sound; three things needed finishing.

1. The de-duplication was AMD-only, and it did not have to be.

   It keyed on cl_amd_device_attribute_query, with a null fallback for every
   other vendor -- correct but narrow: a non-AMD machine got no fingerprint at
   all, so a card seen through two ICDs would still have been swept twice. A
   contributor's device dump settles it: both an NVIDIA RTX 500 Ada and an Intel
   Arc report cl_khr_device_uuid and cl_khr_pci_bus_info, which are Khronos
   standards designed for exactly this.

   The resolution order is now UUID, then PCI bus info, then the AMD vendor
   extension for drivers predating both. The method is renamed accordingly:
   pciFingerprintOf -> physicalDeviceFingerprintOf, since a UUID is not a PCIe
   address and the old name would have lied about two of the three sources.

   The parsers are separated from the CL call and unit-tested, which the AMD path
   never was -- it could only be exercised on the one machine that had the
   hardware. That matters more than usual here: a wrong offset yields a
   plausible-looking fingerprint, and a plausible-looking wrong fingerprint either
   merges two distinct GPUs (silently halving a rig) or fails to merge one card
   seen twice. Neither surfaces as an error at runtime. 14 tests now pin the byte
   layouts, the all-zero-UUID rejection, unsigned bus numbers, host byte order,
   and whole-token extension matching.

   Two defects found while writing them: the AMD type field was read as its first
   byte rather than as the cl_uint it is (correct only on little-endian hosts),
   and extension detection used a substring match, which would claim
   cl_khr_device_uuid support on a device advertising only
   cl_khr_device_uuid_extended.

2. The manifest change made four documentation passages wrong.

   Bakin